# KernelTuner

./: .gitignore  README.md  pyproject.toml  visual_computing_revised_proposal.md
configs/: README.md
configs/counters/: default_calibration.example.yaml
configs/experiments/: gemm_smoke.example.yaml  slurm_experiment_list.example.txt
configs/kernels/: gemm.example.yaml
docs/: 00_index.md  01_project_charter.md  02_system_overview.md  03_execution_environment.md  04_experiment_protocol.md  05_data_model_and_artifacts.md  06_implementation_roadmap.md  07_test_strategy.md  08_risks_and_open_questions.md
docs/adr/: ADR-001-single-host-single-gpu.md  ADR-002-heuristic-first-selector.md  ADR-003-file-based-artifact-store.md  ADR-004-matched-budget-evaluation.md  ADR-005-primary-kernel-first.md
docs/specs/: analysis_and_reporting.md  baseline_strategies.md  benchmark_harness.md  cli_and_config.md  config_space_generator.md  experiment_orchestrator.md  kernel_registry.md  profiling_adapter.md  result_store.md  selector_engine.md  signal_collection.md
scripts/slurm/: run_kerneltuner_array.sbatch  submit_kerneltuner.sh
src/kernel_tuner/: __init__.py
src/kernel_tuner/analysis/: __init__.py
src/kernel_tuner/baselines/: __init__.py
src/kernel_tuner/benchmark/: __init__.py
src/kernel_tuner/common/: __init__.py
src/kernel_tuner/config_space/: __init__.py
src/kernel_tuner/experiments/: __init__.py
src/kernel_tuner/kernels/: __init__.py
src/kernel_tuner/profiling/: __init__.py
src/kernel_tuner/selector/: __init__.py
tests/: README.md
(+2 files in other folders)
