[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kerneltuner"
version = "0.1.0"
description = "Research prototype for bottleneck-aware Triton kernel configuration selection."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Pedram Yazdinia" },
  { name = "Giovanni Galea Curmi" },
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
